<resources>
    <string name="app_name">Human Force</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="toast_connectivity_unstable">Network failure</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="loading_text_default">Loading...</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="job_order">Job Order</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="logistics_service">Logistics Service</string>
    <string name="origin">Origin</string>
    <string name="field_required">this field is required</string>
    <string name="destination">Destination</string>
    <string name="request_button">Request a service</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="customer">Customer</string>
    <string name="no_data">No data</string>
    <string name="add_customer">Add Customer</string>
    <string name="google_maps_api">AIzaSyANB6Qnc8JSkOmpUIXrYU2j7S2DqVNU-Bc</string>
    <string name="customer_location">Customer Location</string>
    <string name="warning_field_is_required">Some field is required</string>
    <string name="view_customer">View Customer</string>
    <string name="sales_order">Sales Order</string>
    <string name="active">Active</string>
    <string name="done">Done</string>
    <string name="returned">Returned</string>
    <string name="add_sales_order">Add Sales Order</string>
    <string name="add_item">Add item</string>
    <string name="cannot_find_any_matching_location">Cannot find any matching location</string>
    <string name="quantity">Quantity</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="invoice">Invoice</string>
    <string name="view_sales_order">View Sales Order</string>
    <string name="view_invoice">View Invoice</string>
    <string name="transaction_on">Transaction on</string>
    <string name="due_date_on">Due date on</string>
    <string name="items">Items</string>
    <string name="lead">Lead</string>
    <string name="offer">Offer</string>
    <string name="last_contact_on">Last contact on</string>
    <string name="pending">Pending</string>
    <string name="product">Product</string>
    <string name="product_bundle">Product Bundle</string>
    <string name="more">More</string>
    <string name="search_customer">Search Customer</string>
    <string name="view_offer">View Offer</string>
    <string name="items_included">items included</string>
    <string name="no_items_included">No items included</string>
    <string name="some_tax_included">Some tax is included, tap here to view details</string>
    <string name="no_link_to_any_invoice">No link to any invoice</string>
    <string name="invalid_username_or_password">invalid username or password</string>
    <string name="choose_price_list">Choose price list</string>
    <string name="price_list">Price list</string>
    <string name="please_fill_the_customer_first">please fill the customer first</string>
    <string name="no_link_to_sales_order">No link to sales order</string>
    <string name="employee">Employee</string>
    <string name="joining_date_on">Joining on date</string>
    <string name="view_employee">View Employee</string>
    <string name="leave_application">Leave Application</string>
    <string name="leave">Leave</string>
    <string name="day">day</string>
    <string name="only">Only</string>
    <string name="can_approve_this_leave_application">can approve this leave application</string>
    <string name="from_date_must_be_less_than_to_date">From Date must be less than To Date</string>
    <string name="request_leave_application">Request Leave Application</string>
    <string name="leave_approver_is_null">Leave approver is null</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="please_insert_your_password_to_proceed">Please insert your password to proceed</string>
    <string name="authentication">Authentication</string>
    <string name="proceed">Proceed</string>
    <string name="authenticating">Authenticating</string>
    <string name="invalid_password">Invalid password</string>
    <string name="has_approved">has approved</string>
    <string name="has_rejected">has rejected</string>
</resources>
