<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="190dp"
    android:background="@drawable/card_box">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <TextView
            android:id="@+id/auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authentication"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/Black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_insert_your_password_to_proceed"
            android:textSize="16dp"
            android:textStyle="italic"
            android:textColor="@color/Grey"
            />
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/Black"

            android:hint="@string/login_password"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="130dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/proceed_button"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/proceed"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:textSize="16dp"
            android:clickable="true"
            android:background="@drawable/approve_button"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/cancel_button"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:textSize="16dp"
            android:clickable="true"
            android:background="@drawable/reject_button"
            android:textAlignment="center"/>
    </LinearLayout>

</RelativeLayout>