<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bobzone.hrf.humanresource.LoginActivity"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:gravity="bottom"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="16dp"
                android:textColor="@color/Black" />
        </LinearLayout>
        <EditText
            android:text=""
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:id="@+id/username"
            android:layout_gravity="center"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:textColorHint="@color/LightGrey"
            android:singleLine="true"/>
        <EditText
            android:text=""
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/login_password"
            android:layout_gravity="center"
            android:textColor="@color/Black"
            android:textColorHint="@color/LightGrey"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:singleLine="true"/>
        <LinearLayout
            android:visibility="invisible"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Production mode"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/Black"/>
            <Switch
                android:id="@+id/production_mode"
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <TextView
            android:clickable="true"
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="@color/White"
            android:background="@drawable/login_button"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/app_version"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:textAlignment="center"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <ProgressBar
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/loading_indicator_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="login..."
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/Black"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
